--- a/gtk_theme/Red-Monochrome/gtk-3.0/gtk.css
+++ b/gtk_theme/Red-Monochrome/gtk-3.0/gtk.css
@@ -38981,14 +38981,14 @@ window.solid-csd headerbar.titlebar, window.solid-csd paned.titlebar, window.sol
 
 headerbar.default-decoration button.titlebutton,
 .titlebar.default-decoration button.titlebutton {
-  padding: 1px;
-  min-height: 18px;
-  min-width: 18px;
+  padding: 6px;
+  min-height: 26px;
+  min-width: 26px;
   margin: 0; }
 
 headerbar button.titlebutton,
 .titlebar button.titlebutton {
-  padding: 1px; }
+  padding: 6px; }
   headerbar button.titlebutton:hover, headerbar button.titlebutton:active, headerbar button.titlebutton:checked, headerbar button.titlebutton:backdrop, headerbar label:backdrop selction.titlebutton, label:backdrop headerbar selction.titlebutton, headerbar button.titlebutton:active:hover,
   .titlebar button.titlebutton:hover,
   .titlebar button.titlebutton:active,
@@ -39000,13 +39000,16 @@ headerbar button.titlebutton,
     transition: none; }
   headerbar button.titlebutton.close,
   .titlebar button.titlebutton.close {
-    padding: 1px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 3px;
+    padding-right: 7px;
     border-image: none;
     box-shadow: none;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 18px 18px;
-    background-image: -gtk-recolor(url("../assets/breeze-close-symbolic.svg"), color @theme_text_color_breeze);
+    background-size: 26px 26px;
+    background-image: url("../assets/breeze-close-symbolic.svg");
     -gtk-icon-source: none; }
     headerbar button.titlebutton.close image,
     .titlebar button.titlebutton.close image {
@@ -39015,12 +39018,12 @@ headerbar button.titlebutton,
   .titlebar button.titlebutton.close:hover {
     border-color: transparent;
     background-color: transparent;
-    background-image: -gtk-recolor(url("../assets/breeze-close-hover-symbolic.svg")); }
+    background-image: url("../assets/breeze-close-hover-symbolic.svg"); }
   headerbar button.titlebutton.close:active,
   .titlebar button.titlebutton.close:active {
     border-color: transparent;
     background-color: transparent;
-    background-image: -gtk-recolor(url("../assets/breeze-close-active-symbolic.svg")); }
+    background-image: url("../assets/breeze-close-active-symbolic.svg"); }
   headerbar button.titlebutton.close:backdrop, headerbar label:backdrop selction.close, label:backdrop headerbar selction.close,
   .titlebar button.titlebutton.close:backdrop,
   .titlebar label:backdrop selction.close,
@@ -39030,13 +39033,16 @@ headerbar button.titlebutton,
     background-image: -gtk-recolor(url("../assets/breeze-close-symbolic.svg")); }
   headerbar button.titlebutton.maximize,
   .titlebar button.titlebutton.maximize {
-    padding: 1px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 5px;
+    padding-right: 4px;
     border-image: none;
     box-shadow: none;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 18px 18px;
-    background-image: -gtk-recolor(url("../assets/breeze-maximize-symbolic.svg")); }
+    background-size: 26px 26px;
+    background-image: url("../assets/breeze-maximize-symbolic.svg"); }
     headerbar button.titlebutton.maximize image,
     .titlebar button.titlebutton.maximize image {
       color: transparent; }
@@ -39045,12 +39051,12 @@ headerbar button.titlebutton,
     border-color: transparent;
     background-color: transparent;
     background-size: contain;
-    background-image: -gtk-recolor(url("../assets/breeze-maximize-hover-symbolic.svg")); }
+    background-image: url("../assets/breeze-maximize-hover-symbolic.svg"); }
   headerbar button.titlebutton.maximize:active,
   .titlebar button.titlebutton.maximize:active {
     border-color: transparent;
     background-color: transparent;
-    background-image: -gtk-recolor(url("../assets/breeze-maximize-active-symbolic.svg")); }
+    background-image: url("../assets/breeze-maximize-active-symbolic.svg"); }
   headerbar button.titlebutton.maximize:backdrop, headerbar label:backdrop selction.maximize, label:backdrop headerbar selction.maximize,
   .titlebar button.titlebutton.maximize:backdrop,
   .titlebar label:backdrop selction.maximize,
@@ -39060,13 +39066,16 @@ headerbar button.titlebutton,
     background-image: -gtk-recolor(url("../assets/breeze-maximize-symbolic.svg")); }
   headerbar button.titlebutton.minimize,
   .titlebar button.titlebutton.minimize {
-    padding: 1px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 6px;
+    padding-right: 2px;
     border-image: none;
     box-shadow: none;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 18px 18px;
-    background-image: -gtk-recolor(url("../assets/breeze-minimize-symbolic.svg")); }
+    background-size: 26px 26px;
+    background-image: url("../assets/breeze-minimize-symbolic.svg"); }
     headerbar button.titlebutton.minimize image,
     .titlebar button.titlebutton.minimize image {
       color: transparent; }
@@ -39074,12 +39083,12 @@ headerbar button.titlebutton,
   .titlebar button.titlebutton.minimize:hover {
     border-color: transparent;
     background-color: transparent;
-    background-image: -gtk-recolor(url("../assets/breeze-minimize-hover-symbolic.svg")); }
+    background-image: url("../assets/breeze-minimize-hover-symbolic.svg"); }
   headerbar button.titlebutton.minimize:active,
   .titlebar button.titlebutton.minimize:active {
     border-color: transparent;
     background-color: transparent;
-    background-image: -gtk-recolor(url("../assets/breeze-minimize-active-symbolic.svg")); }
+    background-image: url("../assets/breeze-minimize-active-symbolic.svg"); }
   headerbar button.titlebutton.minimize:backdrop, headerbar label:backdrop selction.minimize, label:backdrop headerbar selction.minimize,
   .titlebar button.titlebutton.minimize:backdrop,
   .titlebar label:backdrop selction.minimize,
@@ -39089,30 +39098,33 @@ headerbar button.titlebutton,
     background-image: -gtk-recolor(url("../assets/breeze-minimize-symbolic.svg")); }
 
 .maximized headerbar button.titlebutton.maximize, .maximized .titlebar button.titlebutton.maximize {
-  padding: 1px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 5px;
+  padding-right: 4px;
   border-image: none;
   box-shadow: none;
   background-position: center;
-  background-size: 18px 18px;
+  background-size: 26px 26px;
   background-repeat: no-repeat;
-  background-image: -gtk-recolor(url("../assets/breeze-maximized-symbolic.svg")); }
+  background-image: url("../assets/breeze-maximized-symbolic.svg"); }
   .maximized headerbar button.titlebutton.maximize image, .maximized .titlebar button.titlebutton.maximize image {
     color: transparent; }
 
 .maximized headerbar button.titlebutton.maximize:hover, .maximized .titlebar button.titlebutton.maximize:hover {
   border-color: transparent;
   background-color: transparent;
-  background-image: -gtk-recolor(url("../assets/breeze-maximized-hover-symbolic.svg")); }
+  background-image: url("../assets/breeze-maximized-hover-symbolic.svg"); }
 
 .maximized headerbar button.titlebutton.maximize:active, .maximized .titlebar button.titlebutton.maximize:active {
   border-color: transparent;
   background-color: transparent;
-  background-image: -gtk-recolor(url("../assets/breeze-maximized-active-symbolic.svg")); }
+  background-image: url("../assets/breeze-maximized-active-symbolic.svg"); }
 
 .maximized headerbar button.titlebutton.maximize:backdrop, .maximized headerbar label:backdrop selction.maximize, label:backdrop .maximized headerbar selction.maximize, .maximized .titlebar button.titlebutton.maximize:backdrop, .maximized .titlebar label:backdrop selction.maximize, label:backdrop .maximized .titlebar selction.maximize {
   border-color: transparent;
   background-color: transparent;
-  background-image: -gtk-recolor(url("../assets/breeze-maximized-symbolic.svg")); }
+  background-image: -gtk-recolor(url("../assets/breeze-maximize-symbolic.svg")); }
 
 headerbar.selection-mode button.titlebutton,
 .titlebar.selection-mode button.titlebutton {
